--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 							<img src="img/posts/thumbnail-1.PNG" alt="thumbnail" class="object-cover">
 							<div class="bg-white">
 								<div class="p-2">
-									<a href="" class="hover:text-blue-700 text-black text-lg font-semibold">
+									<a href="blog.html" class="hover:text-blue-700 text-black text-lg font-semibold">
 										<h1 class="mb-3"> <span class="text-blue-600">[Tugas 1] </span>Resume Video Konsep Dasar Teknologi Informasi</h1>
 									</a>
 									<span class="text-black">
-										Pada video kali ini dibahasa materi mengenai .... <a href="" class="text-blue-600 hover:text-blue-300">See More</a>
+										Pada video kali ini dibahasa materi mengenai .... <a href="blog.html" class="text-blue-600 hover:text-blue-300">See More</a>
 									</span>
 								</div>
 								<div class="card-badge">
