--- a/blog.html
+++ b/blog.html
@@ -175,12 +175,12 @@
 		</div>
 	</main> <!-- End Main Content -->
 	
-	<footer class="bg-gray-800 text-white flex mt-16">
+	<!-- <footer class="bg-gray-800 text-white flex mt-16">
 		<div class="flex container items-center mx-auto py-4 px-4" style="">
 			<div class="font-semibold">&#169 Copyright <span class="text-blue-500"> MZABlog </span> 2020</div>
 			<div class="ml-auto">Made With <span class="text-green-500"> Tailwind CSS </span> </div>
 		</div>
-	</footer>			
+	</footer>			 -->
 
 	<script src="toggler.js"></script>
 </body>
