--- a/blog.html
+++ b/blog.html
@@ -147,7 +147,7 @@
 					</div>
 				</div>
 
-				<div class="">
+				<div class="mb-8">
 					<div class="bg-gray-800 mx-4 md:mx-0 pb-4">
 						<div class="border-b-2 border-gray-200 border-opacity-25 pb-4 p-4 mb-4">
 							<span class="text-md uppercase font-semibold tracking-wider">Popular</span>
