--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						<div class="flex p-4 md:py-2 card"> <!-- Card Medium -->
 							<img src="img/posts/thumbnail-1.PNG" alt="thumbnail" class="w-24 h-24 object-cover">
 							<div class="bg-white text-black p-2">
-								<a href="" class="hover:text-blue-700"> <h1 class="text-sm"> <span class="text-blue-600">[Tugas 1] </span>Resume Video Konsep Dasar Tek...</h1> </a>
+								<a href="blog.html" class="hover:text-blue-700"> <h1 class="text-sm"> <span class="text-blue-600">[Tugas 1] </span>Resume Video Konsep Dasar Tek...</h1> </a>
 								<div class=" mt-4 flex items-center">
 									<div class="flex items-center text-sm mr-4">
 										<i class="fa fa-pencil"></i>
